# RPG

./: CMakeLists.txt  README.md
docs/: implementation_plan.md
include/: Character.h  Enemy.h  Game.h  Inventory.h  Item.h  Map.h  NPC.h  Player.h
src/: Character.cpp  Enemy.cpp  Game.cpp  Inventory.cpp  Item.cpp  Map.cpp  NPC.cpp  Player.cpp  main.cpp  test_character.cpp  test_enemy.cpp
